<resources>
    <string name="app_name">Wisata Bangka Belitung</string>
    <string name="wisata_bangka">Wisata Bangka Belitung</string>
    <string name="tanggal">Date</string>
    <string name="hotel">Hotel</string>
    <string name="restoran">Restoran</string>
    <string name="wisata">Wisata</string>
    <string name="peta">Peta</string>
    <string name="tentang">Tentang</string>
    <string name="kategori">Daftar Kategori</string>
    <string name="daftar_hotel">Daftar Hotel Bangka Belitung</string>
    <string name="hotel_swiss">Swiss-Belhotel Pangkalpinang</string>
    <string name="hotel_santika">Hotel Santika Premiere Beach \nResort Belitung</string>
    <string name="hotel_bangka">Bangka City Hotel</string>
    <string name="hotel_bw">BW SUITE Belitung Hotel</string>
    <string name="hotel_novila">Novilla Boutique Resort</string>
    <string name="title_activity_hotel_maps">Map</string>
    <string name="jalan_hotel_swiss">Jl. Tj. Pandan - Tj. Kelayang No.168,\nTerong, Sijuk, Kabupaten Belitung,\nKepulauan Bangka Belitung 33414</string>
    <string name="telp_hotel_swiss">+627199304888</string>
    <string name="klik_map">Klik Disini Untuk melihat Map</string>
    <string name="jalan_hotel_santika">Jl. Pantai, Dusun Ulu, Sijuk, Kabupaten\nBelitung, Kepulauan Bangka Belitung\n33414</string>
    <string name="telp_hotel_santika">+6282371891889</string>
    <string name="hotel_santikaa">Hotel Santika Premiere</string>
    <string name="jalan_hotel_bangka">Jl. Aleksander I No.depan, CBC \n(Citraland, Botanical City, Kota\nPangkal  Pinang, Sumatera Selatan\n11730</string>
    <string name="telp_hotel_bangka">+627174262907</string>
    <string name="jalan_hotel_bw">Jl. Pattimura, Tj. Pendam, Tj. Pandan,\nKabupaten Belitung, Kepulauan\nBangka Belitung 33414</string>
    <string name="telp_hotel_bw">+6271923898</string>
    <string name="jalan_hotel_novilla">Jl. Laut, Kampung Pasir, Sungailiat,\nKuday, Sungai Liat, Kabupaten  Bangka,\nKepulauan Bangka Belitung  33255</string>
    <string name="telp_hotel_novilla">+6271792535</string>
    <string name="daftar_restoran">Daftar Restoran Bangka Belitung</string>
    <string name="restoran_neptune">Neptune Club - Istana Laut Restaurant</string>
    <string name="restoran_otak">Otak - Otak Ase</string>
    <string name="restoran_wan">Rumah Makan WAN BIE - Tj. Pandan</string>
    <string name="restoran_timpo">Rumah Makan Belitong Timpo Duluk</string>
    <string name="restoran_dapoer">Dapoer Belitong</string>
    <string name="restoran_neptunee">Neptune Club - Istana Laut Restaurant</string>
    <string name="jalan_restoran_neptune">Jl. Raya Pantai Pasir Padi, Kel. Temberan Kec. Bukit Intan, Bukit Intan, Kota Pangkal Pinang, Kepulauan Bangka Belitung 33147</string>
    <string name="telp_restoran_neptune">+627174256140</string>
    <string name="jalan_restoran_otak">Jl. Kp. Bintang No.149, Bintang, Kec.\nRangkui, Kota Pangkal Pinang,\nKepulauan Bangka Belitung 33684</string>
    <string name="telp_restoran_otak">+62717424652</string>
    <string name="restoran_wann">Rumah Makan WAN BIE\n- Tj. Pandan</string>
    <string name="jalan_restoran_wan">Jl. Sriwijaya No.123A, Parit, Tj. Pandan,\nKabupaten Belitung, Kepulauan\nBangka  Belitung 33411</string>
    <string name="telp_restoran_wan">+6281311411417</string>
    <string name="restoran_timpoo">Ruma Makan Belitong Timpo\nDuluk</string>
    <string name="jalan_restoran_timpo">Jl. Lettu Mad Daud No.22, Parit,\nTj.  Pandan, Kabupaten Belitung,\nKepulauan Bangka Belitung 33411</string>
    <string name="telp_restoran_timpo">+627199223242</string>
    <string name="jalan_restoran_dapoer">Tj. Pandan, Kabupaten Belitung,\nKepulauan Bangka Belitung 33411</string>
    <string name="telp_restoran_dapoer">+6271923297 </string>
    <string name="daftar_wisata">Daftar Wisata</string>
    <string name="wisata_pantai">Pantai Tikus Emas</string>
    <string name="wisata_danau">Danau Kaolin Bangka</string>
    <string name="wisata_museum">Museum Timah Muntok</string>
    <string name="wisata_benteng">Benteng Kota Kapur</string>
    <string name="wisata_hutan">"Bangka Botanical Garden "</string>
    <string name="keterangan_pantai">Dinamakan Pantai Tikus karena terdapat banyak jalan tikus di areal pantai yang konon merupakan jalan para penambang gelap untuk membawa timah. Pantai Tikus diapit oleh dua pantai terkenal lain, yaitu Pantai Rebo dan Pantai Tikus Emas. Fasilitas yang tersedia juga sudahcukup lengkap termasuk parkir, kamar ganti dan taman bermain</string>
    <string name="jalan_wisata_pantai">Parit Padang, Sungai Liat, Kabupaten\nBangka, Kepulauan Bangka Belitung</string>
    <string name="jalan_wisata_danau">Jl. Raya Gadung, Nibung, Koba,\nKabupaten Bangka Tengah,\nKepulauan Bangka Belitung 33782</string>
    <string name="keterangan_danau">Danau Kaolin merupakan danau yang tercipta akibat penggalian tambang timah. Setelah kandungan timahnya habis, danau ini pun merefleksikan warna langit biru yang sangat indah. Selain danau yang berwarna biru, ada juga  danau berwarna hijau yang menambah daya tarik Danau Kaolin Air Bara ini.</string>
    <string name="jalan_wisata_museum">Tanjung, Mentok, Kabupaten Bangka\nBarat, Kepulauan Bangka Belitung\n33351</string>
    <string name="keterangan_museum">Museum Timah Muntok merupakan satu dari dua museum timah yang ada di Indonesia dan juga menjadi yang terbesar di Asia. Museum timah lainnya berada di kota Pangkal Pinang. Museum Timah Muntok lebih berfokus pada sejarah proses peleburan timah dan logam, sedangkan museum timah di kota Pangkal Pinang lebih banyak membahas tentang sejarah proses penambangannya.</string>
    <string name="jalan_wisata_benteng">Jl. Nelayan, Kota Kapur, Mendo Bar.,\nKabupaten Bangka, Kepulauan\nBangka Belitung 33173</string>
    <string name="keterangan_benteng">Situs ini sejatinya adalah situs yang dituliskan dengan huruf pallawa dan berbahasa melayu kuno. Di dalam situs ini berisi tentang sumpah yang juga menjadi tanda wilayah kerajaan Sriwijaya. Benteng Kota Kapur ini ditemukan tahun 1892 oleh J. K Van Der Meulen. Di dalam benteng Anda juga bisa menemukan reruntuhan candi lengkap dengan arcanya</string>
    <string name="jalan_wisata_hutan">Jl. Raya Pasir Padi - Kelurahan Temberan, Kecamatan Bukit Intan, Air Itam, Bukit Intan, Air Itam, Bukit Intan, Kota Pangkal Pinang, Kepulauan Bangka Belitung 33684</string>
    <string name="keterangan_hutan">Di tengah kota yang sudah diciderai oleh kegiatan penambangan timah tempat ini menjadi sebuah penyegaran untuk suasana di daerah Bangka. Area hutan cukup luas yaitu mencapai 300 hektar. Di area hutan terdapat danau buatan yang bisa digunakan untuk bermain Kayak. Terdapat juga Hutan pinus dan berbagai tumbuhan hutan lain yang ditanam di area besar ini. Tempat wisata ini menyegarkan dan cocok dijadikan sebagai tempat hiburan untuk keluarga.</string>
    <string name="profil_penulis">PROFIL PEMBUAT APLIKASI</string>
    <string name="keterangan_profil">Aplikasi Ini dibuat oleh :\nNama : Sofian Indra Maulana\nNPM  : 56418794\nKelas : 3IA04\n\n\nDosen Pembimbing : \nMiftahul Jannah</string>
    <string name="title_activity_hotel_bangka_maps">Map</string>
    <string name="title_activity_hotel_bw_maps">Map</string>
    <string name="title_activity_hotel_novilla_maps">Map</string>
    <string name="title_activity_hotel_santika_maps">Map</string>
    <string name="title_activity_hotel_swiss_maps">Map</string>
    <string name="title_activity_restoran_dapoer_maps">Map</string>
    <string name="title_activity_restoran_neptune_maps">Map</string>
    <string name="title_activity_restoran_otak_maps">Map</string>
    <string name="title_activity_restoran_timpo_maps">Map</string>
    <string name="title_activity_restoran_wan_maps">Map</string>
    <string name="title_activity_wisata_benteng_maps">Map</string>
    <string name="title_activity_wisata_danau_maps">Map</string>
    <string name="title_activity_wisata_hutan_maps">Map</string>
    <string name="title_activity_wisata_museum_maps">Map</string>
    <string name="title_activity_wisata_pantai_maps">Map</string>
    <string name="title_activity_menu_peta">Map</string>
</resources>
