<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background4"
    tools:context=".MenuHotel">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="67dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shape_rectangle_green" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/semibold"
        android:text="@string/daftar_restoran"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/btn_back2"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <Button
        android:id="@+id/btn_back2"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/backarrow"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="72dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-210dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_restoran_neptune"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:backgroundTint="@color/common_google_signin_btn_tint"
                app:srcCompat="@drawable/restoran_neptune" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/semibold"
                android:text="@string/restoran_neptune"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/btn_restoran_otak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:backgroundTint="@color/common_google_signin_btn_tint"
                app:srcCompat="@drawable/restoran_otak" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/semibold"
                android:text="@string/restoran_otak"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/btn_restoran_wan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:backgroundTint="@color/common_google_signin_btn_tint"
                app:srcCompat="@drawable/restoran_wan" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/semibold"
                android:text="@string/restoran_wan"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/btn_restoran_timpo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/common_google_signin_btn_tint"
                app:srcCompat="@drawable/restoran_timpo" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/semibold"
                android:text="@string/restoran_timpo"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/btn_restoran_dapoer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:backgroundTint="@color/common_google_signin_btn_tint"
                app:srcCompat="@drawable/restoran_dapoer" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/semibold"
                android:text="@string/restoran_dapoer"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>